--- a/package.json
+++ b/package.json
@@ -4,27 +4,50 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/dotenv": "^8.2.0",
     "@types/sass": "^1.45.0",
+    "@types/uuid": "^9.0.1",
+    "antd": "^5.3.0",
+    "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "firebase": "^9.17.2",
+    "firebase-functions": "^4.2.1",
+    "google-auth-library": "^8.7.0",
+    "jsonwebtoken": "^9.0.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
+    "react-uuid": "^2.0.0",
     "sass": "^1.58.3",
-    "styled-components": "^5.3.8"
+    "socket.io-client": "^4.6.1",
+    "styled-components": "^5.3.8",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/antd": "^1.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
+    "@types/yup": "^0.32.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "dotenv-webpack": "^8.0.1",
     "react-error-overlay": "6.0.9",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
